<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="test.home.net.voiceamplifier.MainActivity">

    <Button
        android:id="@+id/start_byte_buffer_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_byte_buffer_button_text" />

    <Button
        android:id="@+id/start_byte_buffer_gain_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_byte_buffer_button"
        android:text="@string/start_byte_buffer_gain_button_text" />

    <Button
        android:id="@+id/start_short_buffer_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_byte_buffer_gain_button"
        android:text="@string/start_short_buffer_button_text" />

    <Button
        android:id="@+id/start_short_buffer_gain1_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_short_buffer_button"
        android:text="@string/start_short_buffer_gain1_button_text" />

    <Button
        android:id="@+id/start_short_buffer_gain2_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_short_buffer_gain1_button"
        android:text="@string/start_short_buffer_gain2_button_text" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_short_buffer_gain2_button"
        android:text="@string/stop_button_text" />
</RelativeLayout>
